SERVER-16562: Do fast wiredtiger shutdown